tests/baselines/reference/decoratorOnClassMethodOverload1.errors.txt
decoratorOnClassMethodOverload1.ts(4,5): error TS1249: A decorator can only decorate a method implementation, not an overload.


==== decoratorOnClassMethodOverload1.ts (1 errors) ====
    declare function dec<T>(target: any, propertyKey: string, descriptor: TypedPropertyDescriptor<T>): TypedPropertyDescriptor<T>;
    
    class C {
        @dec
        ~
!!! error TS1249: A decorator can only decorate a method implementation, not an overload.
        method()
        method() { }
    }